Bug 432846 - Bogus (impossibly small) plasmoid sizes
Summary: Bogus (impossibly small) plasmoid sizes
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: 5.18.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-12 10:44 UTC by Dan Dascalescu
Modified: 2022-01-21 18:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
Screencast (1.03 MB, image/gif)
2021-02-12 10:44 UTC, Dan Dascalescu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Dascalescu 2021-02-12 10:44:04 UTC
Created attachment 135624 [details]
Screencast

SUMMARY
Some plasmoids have implausibly small sizes, e.g. "2B". (I assume B = "bytes").


STEPS TO REPRODUCE
1. Search for "crypto plasmoid"
2. Look at the "Size" field of any of the results.
Comment 1 Nate Graham 2021-02-12 16:47:56 UTC
Can confirm with current git master version. "Implausibly small" indeed. Dan, can you take a look?
Comment 2 Aleix Pol 2022-01-20 15:35:54 UTC
Git commit 83bb529c29141b2c83ebe4391ea377b02580af0e by Aleix Pol.
Committed on 20/01/2022 at 15:31.
Pushed by apol into branch 'master'.

kns: Fix resource download sizes

DownloadLinkInformation::size is in kilobytes

M  +1    -1    libdiscover/backends/KNSBackend/KNSResource.cpp

https://invent.kde.org/plasma/discover/commit/83bb529c29141b2c83ebe4391ea377b02580af0e
Comment 3 Aleix Pol 2022-01-20 15:36:09 UTC
Git commit 1e57a18352c34203ef2d70f7011878b14af2aabb by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 20/01/2022 at 15:36.
Pushed by apol into branch 'Plasma/5.24'.

kns: Fix resource download sizes

DownloadLinkInformation::size is in kilobytes


(cherry picked from commit 83bb529c29141b2c83ebe4391ea377b02580af0e)

M  +1    -1    libdiscover/backends/KNSBackend/KNSResource.cpp

https://invent.kde.org/plasma/discover/commit/1e57a18352c34203ef2d70f7011878b14af2aabb