kns: Fix resource download sizes

DownloadLinkInformation::size is in kilobytes

BUG: 432846